...
                                  ),
                          validator: _model.textControllerValidator
                              .asValidator(context),
                        ),
                      ),
                      FFButtonWidget(
                        key: ValueKey('Button_68us'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'FRIENDS_PAGE_PAGE_ADD_FRIEND_BTN_ON_TAP');
                          logFirebaseEvent('Button_firestore_query');
                          _model.foundUser = await queryUsersRecordOnce(
                            queryBuilder: (usersRecord) => usersRecord.where(
...
                                                                      .circular(
                                                                          8.0),
                                                            ),
                                                          ),
                                                          FlutterFlowIconButton(
                                                            key: ValueKey(
                                                                'IconButton_hsax'),
                                                            borderColor: Colors
                                                                .transparent,
                                                            borderRadius: 8.0,
                                                            borderWidth: 1.0,
                                                            buttonSize: 32.0,
                                                            fillColor: Colors
...
