...
  }

  @override
  Widget build(BuildContext context) {
    final tabs = {
      'eventsList': EventsListWidget(),
      'Calendar': CalendarWidget(),
      'friends_page': FriendsPageWidget(),
      'profile_settings': ProfileSettingsWidget(),
    };
    final currentIndex = tabs.keys.toList().indexOf(_currentPageName);

    return Scaffold(
...
